# reybi-api

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.build  README.md  docker-compose.prod.yml
.github/workflows/: deploy.yml
docs/: apinox-schema.yml  reybi-api.yaml
docs/apinox/docs/: reybi-api.md  reybi-api.scalar.html
docs/apinox/hurl/: reybi-api.hurl  reybi-api.sh
docs/apinox/insomnia/: reybi-api.insomnia.json
docs/apinox/openapi/: reybi-api.openapi.yaml
docs/apinox/postman/: reybi-api.postman_collection.json
migrations/: 20260101000001_baseline.sql  20260101000002_plural_views.sql  20260101000003_updated_at_trigger.sql  20260101000004_perf_indexes.sql  20260101000005_product_images_to_array.sql
scripts/: bench-sidecar.sh  bench.py  bench.sh  test_cache.py  test_routes.py
src/: lib.rs  main.rs
src/common/: locale.rs  mod.rs  pagination.rs  response.rs
src/config/: mod.rs  state.rs
src/dto/: mod.rs
src/errors/: mod.rs
src/i18n/: messages.rs
src/locales/: en.json  id.json
src/middleware/: etag.rs  mod.rs
src/models/: user.rs
src/modules/: mod.rs
src/modules/address/: dto.rs  handler.rs  routes.rs  service.rs
src/modules/article/: dto.rs  handler.rs  routes.rs  service.rs
src/modules/auth/: dto.rs  handler.rs  routes.rs  service.rs
src/modules/banner/: dto.rs  handler.rs  mod.rs  routes.rs  service.rs
src/modules/cart/: dto.rs  handler.rs  routes.rs  service.rs
src/modules/deposite/: dto.rs  handler.rs  routes.rs  service.rs
src/modules/landfill/: dto.rs  handler.rs  routes.rs  service.rs
src/modules/order/: dto.rs  handler.rs  routes.rs  service.rs
src/modules/payment/: dto.rs  handler.rs  mod.rs  routes.rs  service.rs
src/modules/product/: dto.rs  handler.rs  routes.rs  service.rs
src/modules/profile/: dto.rs  handler.rs  mod.rs  routes.rs  service.rs
src/modules/review/: dto.rs  handler.rs  routes.rs  service.rs
src/modules/saller/: handler.rs  mod.rs  routes.rs  service.rs
src/modules/trash/: dto.rs  handler.rs  routes.rs  service.rs
src/routes/: address.rs  article.rs  auth.rs  banner.rs  cart.rs  deposite.rs  landfill.rs  mod.rs  order.rs  product.rs  profile.rs  review.rs  saller.rs  trash.rs
src/services/: address.rs  article.rs  auth.rs  banner.rs  cart.rs  deposite.rs  landfill.rs  order.rs  product.rs  profile.rs  review.rs  saller.rs  trash.rs
src/utils/: cache.rs  firebase.rs  helpers.rs  mod.rs
