[package]
name = "reybi-api"
version = "1.0.0"
edition = "2021"
description = "Reybi API - E-commerce & Waste Management Platform"
authors = ["denisetiya"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "compression-gzip", "trace", "limit"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid"] }

# Auth
jsonwebtoken = "9"
argon2 = "0.5"

# Validation
validator = { version = "0.20", features = ["derive"] }

# Utils
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
thiserror = "2"
anyhow = "1"
base64 = "0.22"
urlencoding = "2"
mime_guess = "2"
image = "0.25"
reqwest = { version = "0.12", features = ["json"] }
rand = "0.8"

[dev-dependencies]
tower-http = { version = "0.6", features = ["cors", "compression-gzip", "trace", "limit"] }

[lints.rust]
unsafe_code = "forbid"
