[package]
name = "reybi-api"
version = "1.0.0"
edition = "2021"
description = "Reybi API - E-commerce & Waste Management Platform"
authors = ["denisetiya"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "compression-gzip", "compression-br", "compression-deflate", "trace", "limit", "timeout", "set-header", "fs"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid", "migrate", "json", "macros"] }

# Redis client (cache + rate-limit + idempotency keys)
redis = { version = "0.27", features = ["tokio-comp", "aio", "connection-manager"] }

# CUID2 — collision-resistant IDs matching Prisma's @default(cuid())
cuid2 = "0.1"

# Firebase Admin (ID-token verification)
firebase-auth = "0.4"

# Midtrans webhook signature (SHA-512 over body)
sha2 = "0.10"
hex = "0.4"

# Auth
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
argon2 = "0.5"

# Validation
validator = { version = "0.20", features = ["derive"] }

# Utils
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
thiserror = "2"
anyhow = "1"
base64 = "0.22"
# reqwest only used for localhost self-warm — drop default TLS stack to keep
# the build lean and the binary small (no openssl / native-tls pull-in).
reqwest = { version = "0.12", default-features = false, features = ["json"] }
fnv = "1"
# Faster multithreaded allocator — meaningful win under concurrent load where
# the system allocator's lock contention shows up.  Pulled in as a global
# allocator in `main.rs` via `#[global_allocator]`.
mimalloc = { version = "0.1", default-features = false }

[dev-dependencies]
tower-http = { version = "0.6", features = ["cors", "compression-gzip", "trace", "limit"] }

[lints.rust]
unsafe_code = "forbid"
